// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiple comments are parsed: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Comment",
                "about": [],
                "body": "/* comment 1 */",
              },
              "elements": [],
            },
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Comment",
                "about": [],
                "body": "/* comment 2 */",
              },
              "elements": [],
            },
          ],
          "prefixes": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable with annotations with a named single line comment: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Comment",
                "about": [],
                "body": "/* this is a comment */",
                "declaredName": "Comment",
              },
              "elements": [],
            },
          ],
          "prefixes": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable with annotations with multi line comment: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Comment",
                "about": [],
                "body": "/* this is
             * a comment
             */",
              },
              "elements": [],
            },
          ],
          "prefixes": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable with annotations with named documentation: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Documentation",
                "about": [],
                "body": "/* this is a doc */",
                "declaredName": "Doc",
              },
              "elements": [],
            },
          ],
          "prefixes": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable with annotations with single line comment without a keyword: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Comment",
                "about": [],
                "body": "/* this is a comment */",
              },
              "elements": [],
            },
          ],
          "prefixes": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable with annotations with single line comment: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Comment",
                "about": [],
                "body": "/* this is a comment */",
              },
              "elements": [],
            },
          ],
          "prefixes": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable with annotations with textual representation with keyword and no name: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "TextualRepresentation",
          "about": [],
          "body": "/* self.x > 0.0 */",
          "language": ""OCL"",
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable with annotations with textual representation with keyword: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "TextualRepresentation",
          "about": [],
          "body": "/* self.x > 0.0 */",
          "declaredName": "inOCL",
          "language": ""OCL"",
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable with annotations with textual representation without keyword: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "TextualRepresentation",
                "about": [],
                "body": "/* <a href="https://plm.elsewhere.com/part?id="1234"/> */",
                "language": ""HTML"",
              },
              "elements": [],
            },
          ],
          "declaredName": "B",
          "prefixes": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`elements are parseable with annotations with unnamed documentation: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "element": {
          "$type": "Namespace",
          "children": [
            {
              "$type": "OwningMembership",
              "element": {
                "$type": "Documentation",
                "about": [],
                "body": "/* this is a doc */",
              },
              "elements": [],
            },
          ],
          "prefixes": [],
        },
        "elements": [],
      },
    ],
    "prefixes": [],
  },
}
`;
